# cat-app

./: .dockerignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
cat_api/: __init__.py  cat_api.py  cat_api_config.py  fetch_cat_apy.py
cat_user_api/: __init__.py
docker_build/: Dockerfile  prestart.sh
migrations/versions/: 1f4fff58fbb0_add_cat_table.py  52decefac641_add_cat_and_phrases_tables.py  cb5b40e3e724_init_cat.py
models/: __init__.py  cat.py  database.py  phrase.py
other_api/: __init__.py
other_api/cat_api/: __init__.py
other_api/cat_user_api/: __init__.py  fetch_user_api.py
templates/: base.html
templates/cats/: cat_list.html  detail.html  home.html
templates/phrases/: create.html  home.html  list_phrases.html
views/: __init__.py
views/cat/: __init__.py  crud.py  view.py
views/phrase/: __init__.py  crud.py  view.py
views/root/: __init__.py  view.py
