[tool.poetry]
name = "app-cat"
version = "0.1.0"
description = ""
authors = ["Ivan Lebedev <ivanleb171@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
psycopg = "^3.1.18"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
